--- a/index.html
+++ b/index.html
@@ -10,7 +10,51 @@
 </head>
 
 <body>
+  <h1>HTML Table Reference</h1>
+  <h2>Table Tags</h2>
 
+  <table>
+    <thead>
+      <tr>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>&lt;table&gt;</td>
+        <td>Table</td>
+        <td>The wrapper element for all HTML tables.</td>
+      </tr>
+      <tr>
+        <td>&lt;thead&gt;</td>
+        <td>Table Head</td>
+        <td>The set of rows defining the column headers in a table.</td>
+      </tr>
+      <tr>
+        <td>&lt;tbody&gt;</td>
+        <td>Table Body</td>
+        <td>The set of rows containing actual table data.</td>
+      </tr>
+      <tr>
+        <td>&lt;tr&gt;</td>
+        <td>Table Row</td>
+        <td>The table row container.</td>
+      </tr>
+      <tr>
+        <td>&lt;td&gt;</td>
+        <td>Table Data</td>
+        <td>Contains data for the table.</td>
+      </tr>
+      <tr>
+        <td>&lt;tfoot&gt;</td>
+        <td>Table Footer</td>
+        <td>The set of rows defining the footer in a table.</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
 </html>
