--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
 
     <tbody>
       <tr>
-        <td>&lt;table&gt;</td>
+        <td><span>&lt;table&gt;</span></td>
         <td>Table</td>
         <td>The wrapper element for all HTML tables.</td>
       </tr>
       <tr>
-        <td>&lt;thead&gt;</td>
+        <td><span>&lt;thead&gt;</span></td>
         <td>Table Head</td>
         <td>The set of rows defining the column headers in a table.</td>
       </tr>
       <tr>
-        <td>&lt;tbody&gt;</td>
+        <td><span>&lt;tbody&gt;</span></td>
         <td>Table Body</td>
         <td>The set of rows containing actual table data.</td>
       </tr>
       <tr>
-        <td>&lt;tr&gt;</td>
+        <td><span>&lt;tr&gt;</span></td>
         <td>Table Row</td>
         <td>The table row container.</td>
       </tr>
       <tr>
-        <td>&lt;td&gt;</td>
+        <td><span>&lt;td&gt;</span></td>
         <td>Table Data</td>
         <td>Contains data for the table.</td>
       </tr>
       <tr>
-        <td>&lt;tfoot&gt;</td>
+        <td><span>&lt;tfoot&gt;</span></td>
         <td>Table Footer</td>
         <td>The set of rows defining the footer in a table.</td>
       </tr>
