--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
       </tr>
     </tbody>
   </table>
+
+  <h2>Table Attributes</h2>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Attribute</th>
+        <th>Name</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><span>colspan</span></td>
+        <td>Column Span</td>
+        <td>Defines how many columns a td element should span.</td>
+      </tr>
+      <tr>
+        <td><span>rowspan</span></td>
+        <td>Row Span</td>
+        <td>Defines how many rows a td element should span.</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
 </html>
