--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </tr>
       <tr>
         <td><span>&lt;tfoot&gt;</span></td>
-        <td>Table Footer</td>
+        <td>Table Foot</td>
         <td>The set of rows defining the footer in a table.</td>
       </tr>
     </tbody>
